--- a/scss/main.scss
+++ b/scss/main.scss
@@ -46,6 +46,7 @@ body {
       p {
         max-width: 400px;
         margin: 1rem auto 0;
+        color: $grayish-blue;
       }
     }
   }
@@ -59,12 +60,15 @@ body {
         padding: 2rem 1.5rem;
         margin: 1rem auto;
         border-radius: 10px;
-        box-shadow: 0px 2px 10px $grayish-blue;
+        box-shadow: 0px 2px 10px rgb(196, 196, 196);
         height: 250px;
 
-        h3,
+        h3 {
+          margin-bottom: 0.5rem;
+        }
         p {
           margin-bottom: 0.5rem;
+          color: $grayish-blue;
         }
       }
       img {
